fixed overflow-x in body element

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ html, body {
     width: 100vw;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 #home-bg {
